--- a/Connectors.OnnxRuntimeGenAI.csproj
+++ b/Connectors.OnnxRuntimeGenAI.csproj
@@ -6,7 +6,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>10</LangVersion>
-    <Configurations>Debug;Release;Debug_Cuda;Release_Cuda;</Configurations>
+    <Configurations>Debug;Release;Debug_Cuda;Release_Cuda;Debug_DirectML;Release_DirectML;</Configurations>
   </PropertyGroup>
 
   <PropertyGroup>
@@ -18,7 +18,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI" Version="0.2.0-rc4" Condition=" '$(Configuration)' == 'Debug' OR '$(Configuration)' == 'Release' " />
     <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI.Cuda" Version="0.2.0-rc4" Condition=" '$(Configuration)' == 'Debug_Cuda' OR '$(Configuration)' == 'Release_Cuda' " />
-    <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.10.0" />
+	  <PackageReference Include="Microsoft.ML.OnnxRuntimeGenAI.DirectML" Version="0.2.0-rc4" Condition=" '$(Configuration)' == 'Debug_DirectML' OR '$(Configuration)' == 'Release_DirectML' " />
+	  <PackageReference Include="Microsoft.SemanticKernel.Core" Version="1.10.0" />
   </ItemGroup>
 
 </Project>
