add vision scenarios

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@
 ################################################################################
 
 /.vs
-/bin/*
-/obj/*
-/Tests/Labs_sk01/bin/Debug/net8.0
+**/obj/**
+**/bin/**
